...
        view?.setProfileDetails(profile: profileService.profile)
    }
    
    func didTapExitButton(){
        let alert = createAlert(
            with: AlertModel(
                title: "Goodbye!",
                message: "Are you sure you want to exit?",
                buttonText: "")
        )
        view?.showAlert(alert: alert)
    }
    
...
        var alert = UIAlertController(
            title: alertModel.title,
            message: alertModel.message,
            preferredStyle: .alert)
        
        let actionYes = UIAlertAction(
            title: "Yes",
            style: .default) { [weak self] _ in
                guard let self = self else { return }
                self.exitFromProfile()
            }
        
        let actionNo = UIAlertAction(
...
